tests/outref/TLL06.ref
OCTO> select
OCTO> firstname
OCTO> ,lastname
OCTO> from names where
OCTO> CONDITIONS
OCTO> CONDITIONS
OCTO> 0 = 0;
Zero|Cool
Acid|Burn
Cereal|Killer
Lord|Nikon
Joey|
Zero|Cool
OCTO> select notathing from names; select firstname from names limit 1;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: NOTATHING
Error with syntax near (line 1, column 7):

select notathing from names; select firstname from names limit 1;
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select notathing from names;
Zero
OCTO> select lastname from names limit 1;
Cool
OCTO> 
